Fixed checkbox label text overflow

--- a/staticContent/public/static/global.css
+++ b/staticContent/public/static/global.css
@@ -29,6 +29,13 @@ label {
 	display: block;
 }
 
+/* This overwrites the mui class to fix checkbox label text from overflowing */
+.label-text {
+	line-height: normal !important;
+	overflow: visible !important;
+	white-space: unset !important;
+}
+
 input, button, select, textarea {
 	font-family: inherit;
 	font-size: inherit;
